--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,900&display=swap');
+
 *{
   margin: 0;
   padding: 0;
 }
 
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 .intro {
   min-height: 100vh;
-  background-image:linear-gradient(to bottom, rgba(2, 5, 48, 0.6),rgba(167, 17, 4, 0.02) ),url(https://images.unsplash.com/photo-1523978591478-c753949ff840?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.6),rgba(0, 0, 0, .8) ),url(https://images.unsplash.com/photo-1639007335687-fa97eb1b7ef8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,4 +22,12 @@
   color: whitesmoke;
   
   
+}
+
+h1{
+  margin-bottom: 2rem;
+  color: #F39189;
+  
+  font-size: 3.6rem;
+  font-weight: 800;
 }
