--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,10 @@ body {
 h1{
   margin-bottom: 2rem;
   color: #F39189;
-  
   font-size: 3.6rem;
   font-weight: 800;
+}
+
+p {
+  color: #BB8082;
 }
